# fraud_card_transaction_detector

./: bad_reputation_ips.csv  blacklisted_countries.csv  detector.py  menu.py  pyproject.toml  test_dataset.csv
