[project]
name = "credit-card-transaction-fraud-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "nng777",email = "nikodemusng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
